<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Title Meta</string>
    <!-- Common -->
    <string name="search">Search</string>
    <string name="error">An error has occurred</string>
    <!-- Toolbar Main -->
    <string name="settings">Settings</string>
    <string name="share_logs">Share Logs</string>
    <string name="refresh">Refresh</string>
    <!-- Toolbar - Share Logs -->
    <string name="log_share_prompt">Share log file</string>
    <string name="logs_not_found">No logs were created during the last run</string>
    <!-- Main -->
    <string name="all">All</string>
    <string name="metadata_missing">Metadata Missing</string>
    <string name="icon">Icon</string>
    <string name="no_rom">Cannot find any ROMs</string>
    <string name="pin">Pin</string>
    <string name="play">Play</string>
    <string name="searching_roms">Searching for ROMs</string>
    <string name="invalid_file">Invalid file</string>
    <string name="missing_title_key">Missing title key</string>
    <string name="incomplete_prod_keys">Incomplete production keys</string>
    <!-- Main - AppDialog -->
    <string name="updates">Updates</string>
    <string name="dlcs">DLCs</string>
    <string name="issues">Issues</string>
    <string name="notes">Notes</string>
    <string name="cheats">Cheats</string>
    <string name="saves">Saves</string>
    <string name="no_updates">No updates available</string>
    <string name="no_dlcs">No DLCs available</string>
    <string name="pin_to_homescreen">Pin to homescreen</string>
    <!-- Settings - Emulator -->
    <string name="emulator">Emulator</string>
    <string name="search_location">Search Location</string>
    <string name="theme">Theme</string>
    <string name="layout_type">Game Display Layout</string>
    <string name="select_action">Always Show Game Information</string>
    <string name="select_action_desc_on">Game information will be shown on clicking a game</string>
    <string name="select_action_desc_off">Game information will only be shown on long-clicking a game</string>
    <string name="perf_stats">Show Performance Statistics</string>
    <string name="perf_stats_desc_off">Performance Statistics will not be shown</string>
    <string name="perf_stats_desc_on">Performance Statistics will be shown in the top-left corner</string>
    <string name="log_level">Log Level</string>
    <string name="log_compact">Compact Logs</string>
    <string name="log_compact_desc_on">Logs will be displayed in a compact form factor</string>
    <string name="log_compact_desc_off">Logs will be displayed in a verbose form factor</string>
    <!-- Settings - System -->
    <string name="system">System</string>
    <string name="use_docked">Use Docked Mode</string>
    <string name="handheld_enabled">The system will emulate being in handheld mode</string>
    <string name="docked_enabled">The system will emulate being in docked mode</string>
    <string name="username">Username</string>
    <string name="username_default">@string/app_name</string>
    <string name="system_language">System language</string>
    <!-- Settings - Keys -->
    <string name="keys">Keys</string>
    <string name="prod_keys">Production Keys</string>
    <string name="title_keys">Title Keys</string>
    <string name="import_keys_success">Successfully imported keys</string>
    <string name="import_keys_failed">Failed to import keys</string>
    <!-- Settings - Display -->
    <string name="display">Display</string>
    <string name="force_triple_buffering">Force Triple Buffering</string>
    <string name="triple_buffering_enabled">Utilize at least three swapchain buffers (Higher FPS but more input lag)</string>
    <string name="triple_buffering_disabled">Utilize at least two swapchain buffers (Lower FPS but less input lag)</string>
    <string name="disable_frame_throttling">Disable Frame Throttling</string>
    <string name="disable_frame_throttling_enabled">Game is allowed to submit frames as fast as possible (Only for benchmarking)</string>
    <string name="disable_frame_throttling_disabled">Only allow the game to submit frames at the display refresh rate</string>
    <string name="max_refresh_rate">Use Maximum Display Refresh Rate</string>
    <string name="max_refresh_rate_enabled">Sets the display refresh rate as high as possible (Will break most games)</string>
    <string name="max_refresh_rate_disabled">Sets the display refresh rate to 60Hz</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <!-- Input -->
    <string name="input">Input</string>
    <string name="osc">On-Screen Controls</string>
    <string name="osc_enable">Enable On-Screen Controls</string>
    <string name="osc_not_shown">On-Screen Controls won\'t be shown</string>
    <string name="osc_shown">On-Screen Controls will be shown</string>
    <string name="osc_edit">Edit On-Screen Controls layout</string>
    <string name="joystick">Joystick</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="osc_recenter_sticks">Recenter Sticks On Touch</string>
    <string name="controller">Controller</string>
    <string name="config_controller">Configure Controller</string>
    <string name="controller_type">Controller Type</string>
    <string name="none">None</string>
    <string name="handheld_procon">Handheld + Pro Controller</string>
    <string name="procon">Pro Controller</string>
    <string name="ljoycon">Left JoyCon</string>
    <string name="rjoycon">Right JoyCon</string>
    <string name="general">General</string>
    <string name="partner_joycon">Partner Joy-Con</string>
    <string name="rumble_device">Rumble Device</string>
    <string name="supported">Supported</string>
    <string name="not_supported">Not Supported</string>
    <string name="press_any_button">Press any button on a controller</string>
    <string name="confirm_button_again">Confirm choice by pressing a button again</string>
    <string name="builtin">Built-in</string>
    <string name="builtin_vibrator">Built-in Vibrator</string>
    <string name="reset">Reset</string>
    <string name="buttons">Buttons</string>
    <string name="use_button_axis">Use any button or axis on a controller</string>
    <string name="release_confirm">Release to confirm selection</string>
    <string name="hold_confirm">Hold to confirm selection</string>
    <string name="sticks">Sticks</string>
    <string name="stick_button">Stick Button</string>
    <string name="next">Next</string>
    <string name="x_plus">Stick X+ Axis (Right)</string>
    <string name="y_plus">Stick Y+ Axis (Up)</string>
    <string name="x_minus">Stick X- Axis (Left)</string>
    <string name="y_minus">Stick Y- Axis (Down)</string>
    <string name="a_button">A</string>
    <string name="b_button">B</string>
    <string name="x_button">X</string>
    <string name="y_button">Y</string>
    <string name="left_shoulder">Left Shoulder</string>
    <string name="right_shoulder">Right Shoulder</string>
    <string name="left_trigger">Left Trigger</string>
    <string name="right_trigger">Right Trigger</string>
    <string name="plus_button">Plus</string>
    <string name="minus_button">Minus</string>
    <string name="emu_menu_button">Emulator Menu</string>
    <string name="stick_preview">Stick Preview</string>
    <string name="done">Done</string>
    <string name="use_non_stick">Use any unmapped button to finish</string>
    <string name="button">Button</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="dpad">D-pad</string>
    <string name="left_stick">Left Stick</string>
    <string name="right_stick">Right Stick</string>
    <string name="face_buttons">Face Buttons</string>
    <string name="shoulder_trigger"><![CDATA[Shoulder & Trigger Buttons]]></string>
    <string name="shoulder_rail">Shoulder Buttons on Joy-Con Rail</string>
    <string name="misc_buttons">Miscellaneous Buttons</string>
    <!-- Licenses -->
    <string name="licenses">Licenses</string>
    <string name="skyline_license_description">Skyline is licensed under Mozilla Public License 2.0</string>
    <string name="ryujinx_description">Ryujinx has been used for reference throughout the project due to their highly accurate implementations\n\n<b>Note: Skyline is not based on Ryujinx</b></string>
    <string name="vkhpp_description">Vulkan-Hpp provides a C++ API for Vulkan</string>
    <string name="vkma_description">Vulkan Memory Allocator provides a high-quality GPU memory allocator with UMA support</string>
    <string name="khvkval_description">Khronos\'s Vulkan Validation Layer provides error-checking for Vulkan API calls in debug builds</string>
    <string name="oboe_description">Oboe is used for high-performance audio output</string>
    <string name="perfetto_description">Perfetto is used to profile and debug with detailed tracing</string>
    <string name="fmtlib_description">{fmt} provides a modern C++ string formatting API</string>
    <string name="boost_description">Boost provides high-quality implementations of containers and other convenience functions in C++</string>
    <string name="frozen_description">Frozen provides compile-time immutable hash maps with a perfect hash function for faster lookups</string>
    <string name="pugixml_description">pugixml is used to parse the preference XML to retrieve settings from C++</string>
    <string name="opus_description">Opus Audio Codec provides a high-quality Opus decoder used to decode Opus-encoded audio provided by the guest</string>
    <string name="mbedtls_description">Mbed TLS is used to decrypt AES-encrypted NCAs</string>
    <string name="lz4_description">LZ4 is used to extract LZ4-compressed ELF sections from an NSO</string>
    <string name="tzcode_description">tzcode provides a C API to access tzdb for time zone data</string>
    <string name="jssim_description">Java String Similarity powers our search functionality</string>
    <string name="andx_description">AndroidX provides a consistent user-experience across Android versions</string>
    <string name="amat_description">Android Material Components provides a consistent Material Design UI</string>
    <string name="ktstd_description">Kotlin Standard Library provides convenience functions in Kotlin</string>
    <string name="dagger_description">Dagger provides a framework for compile-time dependency injection</string>
    <string name="mtico_description">Material Design Icons provides consistent iconography throughout the application</string>
    <string name="open_sans_description">Open Sans is used as our FOSS shared font replacement for Latin, Korean and Chinese</string>
    <string name="roboto_description">Roboto is used as our FOSS shared font replacement for Nintendo\'s extended character set</string>
    <string name="source_sans_pro_description">Source Sans Pro is used as our FOSS shared font replacement for Nintendo\'s extended Chinese character set</string>
    <!-- Misc -->
    <!--suppress AndroidLintUnusedResources -->
    <string name="expand_button_title" tools:override="true">Expand</string>
</resources>
